# TudorPianoAI

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  get_data.py  run.sh
src/: ReadMidiDataset.cpp
